[package]
name = "slv_options"
version = "0.1.0"
edition = "2021"
authors = ["Quantitative Systems Engineering"]
description = "Stochastic Local Volatility model for options pricing, calibration, and level detection"
license = "MIT"
repository = "https://github.com/klemen-r/slv"
keywords = ["options", "volatility", "finance", "quant", "trading"]
categories = ["finance", "science"]
readme = "README.md"

[lib]
name = "slv_options"
path = "src/lib.rs"

[[bin]]
name = "slv-options-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "slv-options-viz"
path = "src/bin/viz.rs"

[[bin]]
name = "slv-calibrate"
path = "src/bin/slv_calibrate.rs"

[[bin]]
name = "slv-gui"
path = "src/bin/slv_gui.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Numerical computation
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = "0.16"
statrs = "0.16"
num-complex = "0.4"
roots = "0.0.8"

# Linear algebra / optimization
nalgebra = "0.32"
argmin = "0.8"
argmin-math = { version = "0.3", features = ["ndarray_latest-serde"] }

# Interpolation
interp = "0.1"

# Concurrency
rayon = "1.8"
crossbeam = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# GUI - egui
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for Yahoo Finance
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }

# CSV for data storage
csv = "1.3"

# Random numbers
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
